add submit markdown

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -78,6 +78,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a href="{{ url_for('admin.submitArticles') }}">发表博文</a></li>
+                                <li><a href="{{ url_for('admin.submitMarkdown') }}">发表博文(Markdown)</a></li>
                                 <li><a href="{{ url_for('admin.account') }}">管理博客</a></li>
                                 <li><a href="{{ url_for('auth.logout') }}">退出登陆</a></li>
                             </ul>
