--- a/app/templates/admin/submit_markdown.html
+++ b/app/templates/admin/submit_markdown.html
@@ -8,6 +8,8 @@
     {{ super() }}
     <link rel="stylesheet" type="text/css"
           href="{{ url_for('static', filename='tinymce/js/tinymce/plugins/codesample/css/prism.css') }}">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-markdown/2.10.0/css/bootstrap-markdown.min.css"
+      rel="stylesheet"/>
 {% endblock %}
 
 {% block script %}
@@ -15,6 +17,9 @@
     <script src="{{ url_for('static', filename='tinymce/js/tinymce/tinymce.min.js') }}"></script>
     <script src="{{ url_for('static', filename='tinymce/js/tinymce/plugins/codesample/plugin.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/tinymce_setup.js') }}"></script>
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-markdown/2.10.0/js/bootstrap-markdown.js">
+    </script>
 {% endblock %}
 
 {% block admin_content %}
@@ -29,7 +34,7 @@
             {{ form.title(class='submit-article-title', required='') }}（1-50字）
         </div>
         <div class="form-group">
-            {{ form.text() }}
+            {{ form.text(data_provide="markdown", rows="16") }}
         </div>
         <div class="form-group">
             {{ form.types.label(class='control-label') }}：
