--- a/app/static/css/common.css
+++ b/app/static/css/common.css
@@ -2,6 +2,8 @@
 body {
     /*background: #F0F0F0;*/
     background: url('../images/background.jpg');
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 }
 .blog-title a:link {
     text-decoration: none;
