--- a/app/templates/_article_info.html
+++ b/app/templates/_article_info.html
@@ -10,12 +10,14 @@
             <a href="{{ url_for('main.article_sources', id=article.source.id) }}" target="_blank" style="color: white">
                 {{ article.source.name }}
             </a>
-        </span>&nbsp;
+        </span>
+        &nbsp;
         <span class="label label-info">
             <a href="{{ url_for('main.articleTypes', id=article.articleType.id) }}" target="_blank" style="color: white">
                 {{ article.articleType.name }}
             </a>
         </span>
+        &nbsp;
     </div>
     <div class="main-info">
         <span class="label label-primary">浏览 {{ article.num_of_view }}</span>
