--- a/app/templates/admin/admin_base.html
+++ b/app/templates/admin/admin_base.html
@@ -21,6 +21,7 @@
 
 				<li class="nav-header">其它管理</li>
 				<li><a href="{{ url_for('admin.account') }}">用户账户</a></li>
+				<li><a href="{{ url_for('admin.statics') }}">统计信息</a></li>
 				<li><a href="{{ url_for('admin.help') }}">帮助</a></li>
 			</ul>
         </div>
